Bumped to 20130318-SNAPSHOT Performance: Changed IndexField parsing from XPath to direct DOM object use